// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemEntry Displays a link with a cross ref 1`] = `
<div
  class="switch-to-item-entry"
>
  <div
    class="switch-to-item-entry-with-links switch-to-item-entry-with-links-with-badge"
  >
    <a
      class="switch-to-item-entry-link lake-placid-blue"
      data-test="entry-link"
    >
      <i
        aria-hidden="true"
        class="fa fa-fw switch-to-item-entry-icon fa-columns"
      />
       
      <span
        class="switch-to-item-entry-badge cross-ref-badge cross-ref-badge-on-dark-background tlp-swatch-lake-placid-blue"
      >
        <highlight-matching-text-stub>
          art #123
        </highlight-matching-text-stub>
      </span>
       
      <highlight-matching-text-stub
        class="switch-to-item-entry-label"
      >
        
                Lorem ipsum
            
      </highlight-matching-text-stub>
    </a>
     
    <!---->
  </div>
   
  <span
    class="switch-to-item-project"
  >
    
        Guinea Pig
    
  </span>
</div>
`;

exports[`ItemEntry Displays a link with a quick links 1`] = `
<div
  class="switch-to-item-entry"
>
  <div
    class="switch-to-item-entry-with-links switch-to-item-entry-with-links-with-badge"
  >
    <a
      class="switch-to-item-entry-link lake-placid-blue"
      data-test="entry-link"
    >
      <i
        aria-hidden="true"
        class="fa fa-fw switch-to-item-entry-icon fa-columns"
      />
       
      <span
        class="switch-to-item-entry-badge cross-ref-badge cross-ref-badge-on-dark-background tlp-swatch-lake-placid-blue"
      >
        <highlight-matching-text-stub>
          art #123
        </highlight-matching-text-stub>
      </span>
       
      <highlight-matching-text-stub
        class="switch-to-item-entry-label"
      >
        
                Lorem ipsum
            
      </highlight-matching-text-stub>
    </a>
     
    <div
      class="switch-to-item-entry-quick-links"
    >
      <quick-link-stub
        class="switch-to-item-entry-quick-links-link"
        item="[object Object]"
        link="[object Object]"
      />
      <quick-link-stub
        class="switch-to-item-entry-quick-links-link"
        item="[object Object]"
        link="[object Object]"
      />
    </div>
  </div>
   
  <span
    class="switch-to-item-project"
  >
    
        Guinea Pig
    
  </span>
</div>
`;

exports[`ItemEntry Displays a link with an icon 1`] = `
<div
  class="switch-to-item-entry"
>
  <div
    class="switch-to-item-entry-with-links"
  >
    <a
      class="switch-to-item-entry-link lake-placid-blue"
      data-test="entry-link"
    >
      <i
        aria-hidden="true"
        class="fa fa-fw switch-to-item-entry-icon fa-columns"
      />
       
      <!---->
       
      <highlight-matching-text-stub
        class="switch-to-item-entry-label"
      >
        
                Kanban
            
      </highlight-matching-text-stub>
    </a>
     
    <!---->
  </div>
   
  <span
    class="switch-to-item-project"
  >
    
        Guinea Pig
    
  </span>
</div>
`;
